tekton/gitlab-base/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-tekton-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:  
    - host: tekton-listener.TEKTON_DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: el-gitlab-elistener
              servicePort: 8080
